/**
 * Fabric 블록체인 연결 매니저 서비스
 * PVD 서비스와 Access Management 서비스를 포함
 * 포트: 19001
 */

// PVD 서비스 imports (생성될 파일들)
// import { PvdClient } from '../proto/generated/pvd_hist_grpc_web_pb';
// import { SinglePvd, ChainInfo, PvdHist_data, TxList } from '../proto/generated/pvd_hist_pb';

// Access Management 서비스 imports (생성될 파일들)
// import { AccessManagementServiceClient } from '../proto/generated/access_management_grpc_web_pb';
// import { AccessRequestData, RequestQuery, TxIdQuery, SearchByPurposeRequest } from '../proto/generated/access_management_pb';

class FabricBlockchainService {
  constructor(proxyUrl = 'http://localhost:8080') {
    this.proxyUrl = proxyUrl;
    
    // 임시로 주석 처리 - proto 파일 컴파일 후 활성화
    // this.pvdClient = new PvdClient(proxyUrl);
    // this.accessClient = new AccessManagementServiceClient(proxyUrl);
  }

  // =========================
  // PVD 서비스 메서드들
  // =========================

  /**
   * PVD 데이터 저장
   * @param {string} obuId - OBU ID
   * @param {Object} pvdData - PVD 데이터 객체
   * @returns {Promise} PVD 저장 결과
   */
  async putPvdData(obuId, pvdData) {
    try {
      console.log(`📤 PVD 데이터 저장 중: OBU_ID=${obuId}`);
      
      // 임시 구현 - proto 컴파일 후 실제 구현으로 교체
      const mockResponse = {
        success: true,
        txId: `pvd_${obuId}_${Date.now()}`,
        message: 'PVD 데이터 저장 성공 (Mock)',
        obuId: obuId,
        speed: pvdData.speed || 0
      };
      
      console.log('✅ PVD 데이터 저장 완료:', mockResponse);
      return mockResponse;
      
      /* 실제 구현 (proto 컴파일 후 활성화)
      const chainInfo = new ChainInfo();
      chainInfo.setChannelname('pvdchannel');
      chainInfo.setChaincode('pvd');

      const grpcPvdData = new PvdHist_data();
      grpcPvdData.setObuId(obuId);
      grpcPvdData.setSpeed(pvdData.speed || 60);
      grpcPvdData.setCollectionDt(pvdData.collectionDt || new Date().toISOString());
      // ... 기타 PVD 필드들 설정

      const request = new SinglePvd();
      request.setChaininfo(chainInfo);
      request.setPvd(grpcPvdData);

      return new Promise((resolve, reject) => {
        this.pvdClient.putData(request, {}, (error, response) => {
          if (error) {
            console.error('❌ PVD 데이터 저장 실패:', error);
            reject(error);
          } else {
            console.log('✅ PVD 데이터 저장 성공:', response.toObject());
            resolve(response.toObject());
          }
        });
      });
      */
    } catch (error) {
      console.error('❌ PVD 데이터 저장 오류:', error);
      throw error;
    }
  }

  /**
   * PVD 데이터 조회
   * @param {string} obuId - OBU ID
   * @returns {Promise} PVD 조회 결과
   */
  async getPvdData(obuId) {
    try {
      console.log(`🔍 PVD 데이터 조회 중: OBU_ID=${obuId}`);
      
      // 임시 구현
      const mockResponse = {
        success: true,
        data: {
          obuId: obuId,
          speed: 65,
          collectionDt: new Date().toISOString(),
          latitude: 37.5665,
          longitude: 126.9780
        },
        message: 'PVD 데이터 조회 성공 (Mock)'
      };
      
      console.log('✅ PVD 데이터 조회 완료:', mockResponse);
      return mockResponse;
      
    } catch (error) {
      console.error('❌ PVD 데이터 조회 오류:', error);
      throw error;
    }
  }

  /**
   * 트랜잭션 ID로 PVD 데이터 조회
   * @param {string} txId - 트랜잭션 ID
   * @returns {Promise} 트랜잭션 상세 정보
   */
  async getPvdDataByTxId(txId) {
    try {
      console.log(`🔍 트랜잭션 상세 조회 중: ${txId}`);
      
      // 임시 구현
      const mockResponse = {
        success: true,
        count: 1,
        data: [{
          txId: txId,
          pvd: {
            Obu_id: 'OBU-TEST-001',
            Speed: 80,
            Collection_dt: '20250102120000000',
            Startvector_latitude: '37.5665',
            Startvector_longitude: '126.9780'
          },
          timestamp: new Date().toISOString()
        }]
      };
      
      console.log('✅ 트랜잭션 상세 조회 완료:', mockResponse);
      return mockResponse;
      
    } catch (error) {
      console.error('❌ 트랜잭션 상세 조회 오류:', error);
      throw error;
    }
  }

  // =========================
  // Access Management 서비스 메서드들
  // =========================

  /**
   * 접근 요청 저장
   * @param {string} resourceOwner - 데이터 소유자
   * @param {string} purpose - 사용 목적
   * @param {string} organizationName - 조직명
   * @returns {Promise} 저장 결과
   */
  async saveAccessRequest(resourceOwner, purpose, organizationName) {
    try {
      console.log(`📝 접근 요청 저장 중: ${organizationName} → ${resourceOwner} (${purpose})`);
      
      // 임시 구현
      const mockResponse = {
        success: true,
        requestId: Date.now(),
        message: '접근 요청 저장 성공 (Mock)',
        resourceOwner,
        purpose,
        organizationName
      };
      
      console.log('✅ 접근 요청 저장 완료:', mockResponse);
      return mockResponse;
      
    } catch (error) {
      console.error('❌ 접근 요청 저장 오류:', error);
      throw error;
    }
  }

  /**
   * Purpose로 접근 요청 검색
   * @param {string} purpose - 검색할 목적
   * @returns {Promise} 검색 결과
   */
  async searchAccessRequestsByPurpose(purpose) {
    try {
      console.log(`🔍 Purpose 기반 접근 요청 검색: ${purpose}`);
      
      // 임시 구현
      const mockResponse = {
        success: true,
        purpose: purpose,
        txIds: [
          '23ed3f54e86765409324ee100b1f80bd9d04ff08aff1169aaff054b7564de03a',
          '45fg6h78i90jkl123456mn789op012qr345st678uv901wx234yz567ab890cd123'
        ],
        requests: [
          {
            resourceOwner: 'alice',
            purpose: purpose,
            organizationName: 'BIMATRIX',
            status: 'PENDING'
          },
          {
            resourceOwner: 'bob',
            purpose: purpose,
            organizationName: 'BIMATRIX',
            status: 'APPROVED'
          }
        ]
      };
      
      console.log('✅ Purpose 기반 검색 완료:', mockResponse);
      return mockResponse;
      
    } catch (error) {
      console.error('❌ Purpose 기반 검색 오류:', error);
      throw error;
    }
  }

  /**
   * TxId로 접근 요청 조회
   * @param {string} txId - 트랜잭션 ID
   * @returns {Promise} 접근 요청 상세 정보
   */
  async getAccessRequestByTxId(txId) {
    try {
      console.log(`🔍 TxId로 접근 요청 조회: ${txId}`);
      
      // 임시 구현
      const mockResponse = {
        success: true,
        txId: txId,
        data: {
          resourceOwner: 'alice',
          purpose: '수면',
          organizationName: 'BIMATRIX',
          status: 'PENDING'
        }
      };
      
      console.log('✅ TxId 접근 요청 조회 완료:', mockResponse);
      return mockResponse;
      
    } catch (error) {
      console.error('❌ TxId 접근 요청 조회 오류:', error);
      throw error;
    }
  }

  // =========================
  // 통합 메서드들
  // =========================

  /**
   * 연결 테스트
   * @returns {Promise} 연결 상태
   */
  async testConnection() {
    try {
      console.log('🔄 Fabric 블록체인 서비스 연결 테스트 중...');
      
      // 간단한 연결 테스트
      const response = await fetch(`${this.proxyUrl}/`, {
        method: 'POST',
        headers: {
          'Content-Type': 'application/grpc-web+proto'
        }
      });
      
      const connectionStatus = {
        success: response.ok,
        status: response.status,
        proxyUrl: this.proxyUrl,
        services: ['PVD', 'Access Management'],
        port: 19001
      };
      
      console.log('✅ 연결 테스트 완료:', connectionStatus);
      return connectionStatus;
      
    } catch (error) {
      console.error('❌ 연결 테스트 실패:', error);
      return {
        success: false,
        error: error.message,
        proxyUrl: this.proxyUrl
      };
    }
  }
}

export default FabricBlockchainService;
